--- a/src/App.scss
+++ b/src/App.scss
@@ -24,18 +24,19 @@
     display: grid;
     gap: 2rem;
     grid-template-columns: 1fr 1fr 1fr;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
 
     .card {
+        background-color: #1f1f1f;
         display: flex;
         flex-direction: column;
         align-items: center;
         border-radius: 20px;
-        border: solid 5px #1f1f1f;
+        border: solid 5px #1c1c1c;
         margin-right: 4rem;
         margin-left: 4rem;
         text-align: center;
-        height: 35rem;
+        height: 38rem;
         padding: 2rem;
 
         h3 {
@@ -53,6 +54,18 @@
         }
     }
 }
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 3rem;
+    gap: 1rem;
+
+    button {
+        width: 10rem;
+    }
+}
+
 
 footer {
     display: flex;
