--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,15 @@
     }
 }
 
+.filter {
+    text-align: center;
+    margin-bottom: 2rem;
+
+    select {
+        width: 10rem;
+    }
+}
+
 .cardlist {
     display: grid;
     gap: 2rem;
