--- a/src/App.scss
+++ b/src/App.scss
@@ -3,21 +3,21 @@
     color: #fff;
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    margin: 0;
     align-items: center;
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
 
-    h1 {
-        margin: 0;
-        padding-right: 3rem;
-    }
 
     img {
         width: 6rem;
         height: 6rem;
         padding: 1rem;
     }
+
+    p {
+        margin-right: 3rem;
+    }
+
+
 }
 
 .filter {
@@ -45,12 +45,8 @@
         margin-right: 4rem;
         margin-left: 4rem;
         text-align: center;
-        height: 38rem;
+        height: 44rem;
         padding: 2rem;
-
-        h3 {
-            font-size: 2rem;
-        }
 
         p {
             font-size: 1.2rem;
@@ -60,6 +56,42 @@
             width: 100%;
             height: 23rem;
             padding-top: 1rem;
+        }
+
+        .favitem {
+            display: flex;
+
+            h3 {
+                font-size: 2rem;
+            }
+
+            .fav {
+                width: 40px;
+                height: 40px;
+                background-image: url('https://upload.wikimedia.org/wikipedia/commons/3/35/Emoji_u2665.svg');
+                background-size: 100%;
+                align-self: flex-end;
+                margin-bottom: 1.8rem;
+                margin-left: .5rem;
+            }
+
+            .notfav {
+                width: 40px;
+                height: 40px;
+                background-image: url('https://upload.wikimedia.org/wikipedia/commons/4/4f/Ei-heart.svg');
+                background-size: 100%;
+                align-self: flex-end;
+                margin-bottom: 1.8rem;
+                margin-left: .5rem;
+            }
+
+        }
+
+        .cart {
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+            margin-top: 1rem;
         }
     }
 }
